@@ -9,7 +9,7 @@ public interface IRemoteDiceServer
     /**
      * Post a request to the dice server, and return the resulting html page as a string 
      */
-    public String postRequest(String player1, String player2, int max, int numDice, String text, String gameID) throws IOException;
+    public String postRequest(String player1, String player2, int max, int numDice, String text, String gameID, String gameUUID) throws IOException;
     
     
     /**
