@@ -1,3 +1,5 @@
+* add game id, to be used in future pbem server (sgb)
+
 * remove uneeded base tiles, this fixes the white space near algeria (sgb)
 
 Changes for 0.9.4.1
